--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/AuthorPage.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/AuthorPage.razor
@@ -6,19 +6,48 @@
     <div class="flex-collection">
         @if (!string.IsNullOrWhiteSpace(ViewModel.Author.GitHubHandle))
         {
-            <a class="link-item" target="_blank" href=@($"https://github.com/{ViewModel.Author.GitHubHandle}")>GitHub </a>
+            <a class="link-item" target="_blank" rel="noopener" href=@($"https://github.com/{ViewModel.Author.GitHubHandle}")>
+                <span class="fa-stack fa-1x" style="color: #2dba4e;">
+                    <i class="fa-brands fa-github fa-stack-2x">GitHub</i>
+                </span>
+            </a>
         }
         @if (!string.IsNullOrWhiteSpace(ViewModel.Author.TwitchHandle))
         {
-            <a class="link-item" target="_blank" href=@($"https://twitch.tv/{ViewModel.Author.TwitchHandle}")>Twitch </a>
+            <a class="link-item" target="_blank" rel="noopener" href=@($"https://twitch.tv/{ViewModel.Author.TwitchHandle}")>
+                <span class="fa-stack fa-1x" style="color: #a562cf;">
+                    <i class="fa-solid fa-circle fa-stack-2x"></i>
+                    <i class="fa-brands fa-twitch fa-stack-1x fa-inverse">Twitch</i>
+                </span>dddd
+            </a>
+            
         }
         @if (!string.IsNullOrWhiteSpace(ViewModel.Author.TwitterHandle))
         {
-            <a class="link-item" target="_blank" href=@($"https://twitter.com/{ViewModel.Author.TwitterHandle}")>Twitter</a>
+            <a class="link-item" target="_blank" rel="noopener" href=@($"https://twitter.com/{ViewModel.Author.TwitterHandle}")>
+                <span class="fa-stack fa-1x" style="color: #1DA1F2;">
+                    <i class="fa-solid fa-circle fa-stack-2x"></i>
+                    <i class="fa-brands fa-twitter fa-stack-1x fa-inverse">Twitter</i>
+                </span>
+            </a>
+        }
+        @if (!string.IsNullOrWhiteSpace(ViewModel.Author.YouTubeHandle))
+        {
+            <a class="link-item" target="_blank" rel="noopener" href=@($"https://youtube.com/{ViewModel.Author.YouTubeHandle}")>
+                <span class="fa-stack fa-1x" style="color: red;">
+                    <i class="fa-solid fa-circle fa-stack-2x"></i>
+                    <i class="fa-brands fa-youtube fa-stack-1x fa-inverse">YouTube</i>
+                </span>
+            </a>
         }
         @if (!string.IsNullOrWhiteSpace(ViewModel.Author.Website))
         {
-            <a class="link-item" target="_blank" href="@ViewModel.Author.Website">Website</a>
+            <a class="link-item" target="_blank" rel="noopener" href="@ViewModel.Author.Website">
+                <span class="fa-stack fa-1x" style="color: grey;">
+                    <i class="fa-solid fa-circle fa-stack-2x"></i>
+                    <i class="fa-solid fa-up-right-from-square fa-stack-1x fa-inverse">Website</i>
+                </span>
+            </a>
         }
     </div>
 
