--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/LookupUrl.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/LookupUrl.razor
@@ -49,6 +49,8 @@
         <MatTextField Label="Curated Publication ID" @bind-Value="@CuratedPublicationId" Style="flex-grow: 1;" Class="wx-field" Icon="lock_outline" IconTrailing="true" FullWidth="true" Required="true" Type="password"></MatTextField>
 *@
         <MatButton OnClick="PostToCurated" Label="Post To Curated" Class="wx-field"></MatButton>
+        <MatButton OnClick="PostToStorage" Label="Post To Storage" Class="wx-field"></MatButton>
+
         <pre>@CuratedStatusMessage</pre>
 </div>
 </div>
