--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
         <NavLink class="nav-link" href="About">
             <span class="oi oi-heart" aria-hidden="true"></span><span class="nav-text">About</span>
         </NavLink>
-        <NavLink class="nav-link" href="Admin/Articles">
+        <NavLink class="nav-link" href="Admin">
             <span class="oi oi-list-rich" aria-hidden="true"></span><span class="nav-text">Admin</span>
         </NavLink>
         <NavLink class="nav-link">
