--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/Admin/AdminPage.razor
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Client/Pages/Admin/AdminPage.razor
@@ -2,7 +2,7 @@
 <h1>Admin Page</h1>
 <div>
     <div>
-        <ArticlesListComponent></ArticlesListComponent>
+        <ArticlesListComponent Articles="Articles"></ArticlesListComponent>
     </div>
     <div>
 
